[gd_scene load_steps=24 format=3 uid="uid://c8s2cf0y7ipjp"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8g4cu"]
[ext_resource type="PackedScene" uid="uid://du8if47y1yxax" path="res://Scenes/arrow.tscn" id="2_mbyvi"]
[ext_resource type="Texture2D" uid="uid://bgnbdtt7w673c" path="res://Scenes/red_player.tres" id="3_yqxub"]
[ext_resource type="Script" path="res://Scripts/bow.gd" id="4_dwu3o"]
[ext_resource type="Texture2D" uid="uid://dq0t7k5kw0waj" path="res://Assets/spritesheet_retina.png" id="4_xeffk"]
[ext_resource type="Script" path="res://Scripts/fsm.gd" id="5_7n17n"]
[ext_resource type="Script" path="res://Scripts/States/idle.gd" id="6_v5l3r"]
[ext_resource type="Script" path="res://Scripts/States/run.gd" id="7_ec1ms"]
[ext_resource type="Script" path="res://Scripts/States/fall.gd" id="8_fdv54"]
[ext_resource type="Script" path="res://Scripts/States/jump.gd" id="9_k3kr2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nlme1"]
radius = 41.75
height = 127.0

[sub_resource type="AtlasTexture" id="AtlasTexture_srvpx"]
atlas = ExtResource("4_xeffk")
region = Rect2(1152, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aau8f"]
atlas = ExtResource("4_xeffk")
region = Rect2(1024, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt6dd"]
atlas = ExtResource("4_xeffk")
region = Rect2(896, 1280, 128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q078h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojeda"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_7o873"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6h3jw"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, 30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_t7ko4"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, 1), Vector2(-1, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0802851, -0.120428, 0.0]
}

[sub_resource type="Animation" id="Animation_bxwbl"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.120428]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0jnl"]
_data = {
"RESET": SubResource("Animation_7o873"),
"die": SubResource("Animation_6h3jw"),
"idle": SubResource("Animation_t7ko4"),
"run": SubResource("Animation_bxwbl")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w0xy0"]
radius = 40.0
height = 124.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vc7ay"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Bow:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Sprite2D:flip_h")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_8g4cu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.25, -1)
shape = SubResource("CapsuleShape2D_nlme1")

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -95.0
offset_right = 10.0
offset_bottom = -72.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 15
text = "Name"

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_yqxub")

[node name="Bow" type="Node2D" parent="."]
script = ExtResource("4_dwu3o")
arrow = ExtResource("2_mbyvi")

[node name="Hand1" type="Sprite2D" parent="Bow"]
position = Vector2(68, 23)
texture = SubResource("AtlasTexture_srvpx")

[node name="ArrowVisual" type="Sprite2D" parent="Bow"]
position = Vector2(99, -5)
texture = SubResource("AtlasTexture_aau8f")

[node name="Sprite2D" type="Sprite2D" parent="Bow"]
position = Vector2(80, -2)
texture = SubResource("AtlasTexture_vt6dd")

[node name="Hand2" type="Sprite2D" parent="Bow"]
position = Vector2(78, -30)
texture = SubResource("AtlasTexture_srvpx")

[node name="ArrowSpawn" type="Node2D" parent="Bow"]
position = Vector2(120, 0)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -38.0
offset_top = -113.0
offset_right = 39.0
offset_bottom = -100.0
theme_override_styles/background = SubResource("StyleBoxFlat_q078h")
theme_override_styles/fill = SubResource("StyleBoxFlat_ojeda")
value = 10.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j0jnl")
}

[node name="FSM" type="Node" parent="."]
script = ExtResource("5_7n17n")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("6_v5l3r")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("7_ec1ms")

[node name="Fall" type="Node" parent="FSM"]
script = ExtResource("8_fdv54")

[node name="CoyoteTimer" type="Timer" parent="FSM/Fall"]
wait_time = 0.1
one_shot = true

[node name="Jump" type="Node" parent="FSM"]
script = ExtResource("9_k3kr2")

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_w0xy0")
debug_color = Color(0.858824, 0.337255, 0.352941, 0.419608)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vc7ay")

[connection signal="timeout" from="ShootingTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
